quelea (2015.3) stable; urgency=normal
 
  * IPv6 addresses only show as a last resort
  * Top / Bottom for notices now the correct way around
  * Auto-play now works
  * Improve bible passage text layout
  * Add songpro importer
  * Fix search behaviour to ignore non-alphanumeric characters in index and search string
  * Fix long search time when searching for a non-indexed (non-alphanumeric) character

 -- Michael Berry <michael@quelea.org>  Wednesday, 26 April 2015 00:00:00 +0000